tests/pass/trait_default.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/io::println

trait @Base {
    pub fn foo(self) -> i32 {
        return 100
    }
    
    pub fn bar(self) -> i32
}

shape Test (
    val: i32
)

impl Test@Base {
    pub fn bar(self) -> i32 {
       return self.val + 1
    }
    // foo is using default implementation
}

fn main() -> i32 {
    auto t = Test(val = 20)
    auto f = t.foo()
    auto b = t.bar()
    println("Foo: {}", f)
    println("Bar: {}", b)
    return 0
}
