tests/fail/dyn_privacy.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import std/io::println

pub trait @SecretIdentity {
    // Defined as private (no pub)
    fn get_secret(self) -> i32
}

pub shape Spy(id: i32)

// Strict match: implementation is also private (no pub)
impl Spy@SecretIdentity {
    fn get_secret(self) -> i32 {
        return self.id
    }
}

// Function accepting trait object
// Since get_secret is private in the Trait definition, this should NOT be allowed outside the defining module.
fn reveal_secret(obj: dyn @SecretIdentity) {
    // This calls get_secret on the interface.
    // If the interface method is private, this should fail compilation.
    println("Secret: {}", obj.get_secret())
    // EXPECT: E0437
}

fn main() -> i32 {
    auto s = Spy(id=007)
    reveal_secret(s)
    return 0
}
